[package]
name = "strongarm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
substrate = { version = "0.8.1", registry = "substrate", path = "../substrate2/substrate" }
sky130pdk = { version = "0.8.1", registry = "substrate", path = "../substrate2/pdks/sky130pdk" }
spectre = { version = "0.9.1", registry = "substrate", path = "../substrate2/tools/spectre" }
atoll = { version = "0.1.3", registry = "substrate", path = "../substrate2/libs/atoll" }
spice = { version = "0.7.1", registry = "substrate", path = "../substrate2/libs/spice" }
rust_decimal = "1"
rust_decimal_macros = "1"
approx = "0.5.1"
